# rust-uno

./: .gitignore  Cargo.toml  Procfile  endless_test.sh  readme.md
backend/: Cargo.toml
backend/src/: handlers.rs  jwt.rs  jwt_generate.rs  main.rs  util.rs
backend/src/cards/: card.rs  deck.rs  mod.rs
backend/src/err/: add_player.rs  ai.rs  draw_cards.rs  game_start.rs  mod.rs  play_card.rs  player_exist.rs  player_turn.rs  status.rs
backend/src/gamestate/: active_cards.rs  game.rs  game_repo.rs  mod.rs  player.rs  serialization.rs
backend/src/gamestate/players/: ai.rs  mod.rs  player.rs
backend/src/handler/: create_game.rs  draw_card.rs  join_game.rs  lb_reconnect.rs  mod.rs  play_card.rs  restart_game.rs  ws_connect.rs
backend/src/handler/service/: auth.rs  lb_connector.rs  mod.rs
backend/src/handler/util/: mod.rs  response.rs  safe_lock.rs
backend/src/repo/: address_repo.rs  authorization_repo.rs  game_repo.rs  mod.rs
backend/src/tests/: deck_test.rs  game_test.rs
backend/src/ws/: mod.rs  ws_actor.rs  ws_conn.rs  ws_message.rs
backend/src/ws/ws_structs/: draw.rs  finish.rs  gained_cards.rs  mod.rs  penalty.rs  status.rs  (+1 more)
backend/static/: index-33603bcdd7796f9e.js  index-33603bcdd7796f9e_bg.wasm
frontend/: Cargo.toml  README.md  Trunk.toml  index.html
frontend/src/: main.rs  route.rs  sample_data.rs  url.rs
frontend/src/components/: card.rs  home.rs  mod.rs  myuser.rs  oponent.rs
frontend/src/module/: mod.rs  modul.rs  module.rs  ws.rs
frontend/src/pages/: game.rs  home.rs  mod.rs
frontend/src/util/: alert.rs  local_storage.rs  mod.rs
(+79 files in other folders)
