[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rand = "0.8.4"
async-trait = "0.1.51"
actix-web = "4.0.0-beta.11"
jwt-simple = "0.10"
nanoid = "0.4.0"
local-ip-address = "0.4.4"
clap = { version = "3.0.10", features = ["derive"] }
