[package]
name = "Uno"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.18.0"
yewtil = "0.4.0"
yew-router = "0.15.0"
reqwest = { version = "0.11", features = [ "json" ] }
anyhow = "1.0.51"
serde = "1.0.130"
serde_json = "1.0.72"
wasm-bindgen = "0.2.78"
web-sys = "0.3.55"