[package]
name = "uno"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
yewtil = "0.4.0"
yew-router = "0.16.0"
gloo-console = "0.2.1"
gloo-storage = "0.2.0"
reqwest = { version = "0.11", features = [ "json" ] }
reqwasm = "0.4.0"
wasm-bindgen-futures = "0.4.29"
anyhow = "1.0.51"
serde = "1.0.130"
serde_json = "1.0.72"
wasm-bindgen = "0.2.79"
futures = "0.3.19"
web-sys = "0.3.56"